Fix compiler page offset when having too much tabs

--- a/web/src/shell/tab.scss
+++ b/web/src/shell/tab.scss
@@ -64,11 +64,7 @@ label[role="tab"],
 
 [role="tab"] [type="radio"] {
   /* Leave the radio button focusable, but not visible. Copied from .screen-reader-text */
-  clip: rect(1px, 1px, 1px, 1px);
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
+  display: none;
 }
 
 [role="tab"][aria-selected="true"] {
